rnsc/tests/snapshots/error-lexer-integers-invalid_negative_format_werror.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
.code -5xyz
----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/invalid_negative_format.rns:2:7 ]
   │
 2 │ .code -5xyz
   │       ──┬──  
   │         ╰──── '-5xyz' contains invalid characters
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
